--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.18.0",
+    "pinia": "^2.0.33",
     "vue": "^3.2.47",
     "vue-router": "4"
   },
